--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -1075,77 +1075,13 @@
                             <span class="form-control-plaintext"
                                   v-html="aplicativo_diners.unificacion_deuda"></span>
                         </div>
-                    </div>
 
-                    <div class=" row mb-4">
                         <label for="inputName" class="col-md-2 form-label">CONDONACIÓN DE INTERESES</label>
                         <div class="col-md-4 col-informacion">
                             <span class="form-control-plaintext"
                                   v-html="aplicativo_diners.condoncacion_interes"></span>
                         </div>
-
-                        <label for="inputName" class="col-md-2 form-label">SEGREGACIÓN</label>
-                        <div class="col-md-4 col-informacion">
-                            <span class="form-control-plaintext"
-                                  v-html="aplicativo_diners_asignacion.segregacion"></span>
-                        </div>
                     </div>
-
-                    <div class=" row mb-4">
-                        <label for="inputName" class="col-md-2 form-label">CIUDAD DE GESTIÓN</label>
-                        <div class="col-md-4 col-informacion">
-                            <span class="form-control-plaintext" v-html="aplicativo_diners.ciudad_gestion"></span>
-                        </div>
-
-                        <label for="inputName" class="col-md-2 form-label">FECHA DE ELABORACIÓN</label>
-                        <div class="col-md-4 col-informacion">
-                            <span class="form-control-plaintext" v-html="aplicativo_diners.fecha_elaboracion"></span>
-                        </div>
-                    </div>
-
-                    <div class=" row mb-4">
-                        <label for="inputName" class="col-md-2 form-label">NEGOCIADO POR</label>
-                        <div class="col-md-4 col-informacion">
-                            <span class="form-control-plaintext" v-html="aplicativo_diners.negociado_por"></span>
-                        </div>
-
-                        <label for="inputName" class="col-md-2 form-label">NUMERO DE CEDULA SOCIO</label>
-                        <div class="col-md-4 col-informacion">
-                            <span class="form-control-plaintext" v-html="aplicativo_diners.cedula_socio"></span>
-                        </div>
-                    </div>
-
-                    <div class=" row mb-4">
-                        <label for="inputName" class="col-md-2 form-label">NOMBRE DEL SOCIO</label>
-                        <div class="col-md-4 col-informacion">
-                            <span class="form-control-plaintext" v-html="aplicativo_diners.nombre_socio"></span>
-                        </div>
-
-                        <label for="inputName" class="col-md-2 form-label">DIRECCIÓN</label>
-                        <div class="col-md-4 col-informacion">
-                            <span class="form-control-plaintext" v-html="aplicativo_diners.direccion"></span>
-                        </div>
-                    </div>
-
-                    <div class=" row mb-4">
-                        <label for="inputName" class="col-md-2 form-label">SEGURO</label>
-                        <div class="col-md-4 col-informacion">
-                            <span class="form-control-plaintext" v-html="aplicativo_diners.seguro_desgravamen"></span>
-                        </div>
-                    </div>
-
-                    <div class=" row mb-4">
-                        <label for="inputName" class="col-md-2 form-label">NÚMEROS DE CONTACTO</label>
-                        <div class="col-md-4 col-informacion">
-                            <span class="form-control-plaintext" v-html="aplicativo_diners.numero_contactos"></span>
-                        </div>
-
-                        <label for="inputName" class="col-md-2 form-label">MAIL DE CONTACTO</label>
-                        <div class="col-md-4 col-informacion">
-                            <span class="form-control-plaintext" v-html="aplicativo_diners.mail_contacto"></span>
-                        </div>
-                    </div>
-
                     <div class=" row mb-4">
                         <label for="inputName" class="col-md-2 form-label">CIUDAD DE LA CUENTA</label>
                         <div class="col-md-4 col-informacion">
@@ -1155,6 +1091,12 @@
                         <label for="inputName" class="col-md-2 form-label">ZONA DE LA CUENTA</label>
                         <div class="col-md-4 col-informacion">
                             <span class="form-control-plaintext" v-html="aplicativo_diners.zona_cuenta"></span>
+                        </div>
+                    </div>
+                    <div class=" row mb-4">
+                        <label for="inputName" class="col-md-2 form-label">FECHA DE ACTUALIZACIÓN</label>
+                        <div class="col-md-4 col-informacion">
+                            <span class="form-control-plaintext" v-html="aplicativo_diners.fecha_elaboracion"></span>
                         </div>
                     </div>
 
