--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -593,7 +593,7 @@
                             <label for="inputName" class="col-md-2 form-label">Observaciones</label>
                             <div class="col-md-4 col-informacion">
 						    <textarea rows="3" class="form-control specialChar" placeholder="Observaciones"
-                                      v-model="seguimiento_diners.observaciones" id="observaciones_diners" v-autoname></textarea>
+                                      v-model="seguimiento_diners.observaciones" id="observaciones_diners" required v-autoname></textarea>
                             <!--<span id="remain_diners">226</span> caracteres restantes.-->
                             </div>
                         </div>
@@ -741,7 +741,7 @@
                             <label for="inputName" class="col-md-2 form-label">Observaciones</label>
                             <div class="col-md-4 col-informacion">
 						    <textarea rows="3" class="form-control specialChar" placeholder="Observaciones"
-                                      v-model="seguimiento_interdin.observaciones" id="observaciones_interdin" v-autoname></textarea>
+                                      v-model="seguimiento_interdin.observaciones" id="observaciones_interdin" required v-autoname></textarea>
                             <!--<span id="remain_interdin">226</span> caracteres restantes.-->
                             </div>
                         </div>
@@ -889,7 +889,7 @@
                             <label for="inputName" class="col-md-2 form-label">Observaciones</label>
                             <div class="col-md-4 col-informacion">
 						    <textarea rows="3" class="form-control specialChar" placeholder="Observaciones"
-                                      v-model="seguimiento_discover.observaciones" id="observaciones_discover" v-autoname></textarea>
+                                      v-model="seguimiento_discover.observaciones" id="observaciones_discover" required v-autoname></textarea>
                             <!--<span id="remain_discover">226</span> caracteres restantes.-->
                             </div>
                         </div>
@@ -1037,7 +1037,7 @@
                             <label for="inputName" class="col-md-2 form-label">Observaciones</label>
                             <div class="col-md-4 col-informacion">
 						    <textarea rows="3" class="form-control specialChar" placeholder="Observaciones"
-                                      v-model="seguimiento_mastercard.observaciones" id="observaciones_mastercard" v-autoname></textarea>
+                                      v-model="seguimiento_mastercard.observaciones" id="observaciones_mastercard" required v-autoname></textarea>
                             <!--<span id="remain_mastercard">226</span> caracteres restantes.-->
                             </div>
                         </div>
