--- a/views/reportes/geolocalizacion.twig
+++ b/views/reportes/geolocalizacion.twig
@@ -90,31 +90,31 @@
                     infowincontent.appendChild(document.createElement('br'));
 
                     var text = document.createElement('text');
-                    text.textContent = "Campaña: " + campana;
+                    text.textContent = "RESULTADO: " + campana;
                     infowincontent.appendChild(text);
 
                     infowincontent.appendChild(document.createElement('br'));
 
                     var text = document.createElement('text');
-                    text.textContent = "Tipo: " + tipo_campana.toUpperCase();
+                    text.textContent = "ACCIÓN: " + tipo_campana.toUpperCase();
                     infowincontent.appendChild(text);
 
                     infowincontent.appendChild(document.createElement('br'));
 
                     var text = document.createElement('text');
-                    text.textContent = "Fecha de visita: " + fecha_visita;
+                    text.textContent = "OBSERVACIONES: " + fecha_visita;
                     infowincontent.appendChild(text);
 
                     infowincontent.appendChild(document.createElement('br'));
 
                     var text = document.createElement('text');
-                    text.textContent = "Lugar de visita: " + lugar_visita;
+                    text.textContent = "FECHA: " + lugar_visita;
                     infowincontent.appendChild(text);
 
                     infowincontent.appendChild(document.createElement('br'));
 
                     var text = document.createElement('text');
-                    text.textContent = "Asesor: " + asesor;
+                    text.textContent = "GESTOR: " + asesor;
                     infowincontent.appendChild(text);
 
                     var marker = new google.maps.Marker({
